2008-04-24  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/guile-gtk-tree-model.c
	(_with_guile_gtk_generic_tree_model_get_column_type)
	(_with_guile_gtk_generic_tree_model_get_value)
	(_with_guile_gtk_generic_tree_model_iter_nth_child):
	* gnome/gw/gtk-support.c (guile_gtk_tree_path_to_scm)
	(guile_gtk_scm_to_tree_path, GET_ACTION_STR, GET_ACTION_BOOL)
	(GET_ACTION_INT, _wrap_gtk_action_group_add_actions)
	(_wrap_gtk_list_store_set_value, _wrap_gtk_stock_add)
	(_wrap_gtk_tree_store_set_value):
	* gnome/gw/gdk-support.c (scm_scm_to_gdk_color): Fix deprecation
	warnings.

2008-04-10  Andy Wingo  <wingo@unquote>

	* == Released guile-gnome-platform version 2.15.97 ==

2008-04-10  Andy Wingo  <wingo@unquote>

	* NEWS: Update NEWS.

2008-04-10  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gtk.defs (popup):
	* gnome/gw/gtk-support.h:
	* gnome/gw/gtk-support.c (menu_position_fn)
	(_wrap_gtk_menu_popup): Wrap gtk-menu-popup, with a scheme
	positioning function and no user-data argument.

2007-12-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/gtk-support.h: 
	* gnome/gw/gtk-support.c (gtk_widget_get_state): New function.

	* gnome/overrides/gtk.defs (get_state): New method.

2008-04-09  Andy Wingo  <wingo@pobox.com>

	* gnome/gtk/graphical-repl.scm (initialize): Chain up.

	* gnome/contrib/texinfo-buffer.scm (<stexi-ref-tag>): Fix the
	fixes.

2008-04-08  Andy Wingo  <wingo@pobox.com>

	Updates for (gnome gobject) api change

	* gnome/gw/guile-gtk-tree-model.c
	(_with_guile_gtk_generic_tree_model_get_column_type): Expect a
	<gtype-class>, not a <gtype.

	* gnome/gw/gtk-support.c (_wrap_gtk_list_store_new)
	(_wrap_gtk_tree_store_new): Expect <gtype-class> instances, not
	<gtype>s.
	(_wrap_gtk_message_dialog_new): Minimal updates.
	(_wrap_gtk_text_buffer_get_bounds)
	(_wrap_gtk_text_buffer_get_selection_bounds)
	(_wrap_gtk_tree_selection_get_selected)
	(cell_data_func): Use new GValue functions.

	* gnome/gw/gdk-support.c (gdk_event_to_vector): Try to eliminate